[gd_scene load_steps=4 format=3 uid="uid://cd7adillri8dg"]

[ext_resource type="Script" uid="uid://00o0ce2rck0o" path="res://scenes/views/directory_browser.gd" id="1_lhs58"]
[ext_resource type="Texture2D" uid="uid://lpm7nlylv3md" path="res://assets/icons/Search.svg" id="1_xatfl"]
[ext_resource type="Script" uid="uid://b364mp4wtn4nm" path="res://scenes/directory_tree.gd" id="2_dt7d6"]

[node name="DirectoryView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lhs58")

[node name="DirectoryFilter" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Filter"
right_icon = ExtResource("1_xatfl")

[node name="DirectoryTree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
scroll_horizontal_enabled = false
script = ExtResource("2_dt7d6")

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(100, 60)

[connection signal="text_changed" from="DirectoryFilter" to="." method="filter_tree"]
[connection signal="button_clicked" from="DirectoryTree" to="." method="_on_directory_tree_button_clicked"]
[connection signal="gui_input" from="DirectoryTree" to="." method="_on_directory_tree_gui_input"]
